--- a/challenge.html
+++ b/challenge.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
   <div>
-    <p>A Box</p>
+    <p>Box 1</p>
     <input type="text"  
            id="input" name="input"
            placeholder="Type something"
