--- a/challenge.html
+++ b/challenge.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   <link rel="stylesheet" href="challenge.css">
   <title>Challenge</title>
 </head>
+
 <body>
   <nav>
-  <div>
-    <p>Box 1235555555</p>
-    <input type="text"  
-           id="input" name="input"
-           placeholder="Type something"
-           onclick="empty()">
-    
-  </div>
-  <div>
-    <p>Another Box</p>
-    <input type="text" id="output" name="output"
-           placeholder="Type something"
-           onclick="empty()">
-  </div> 
-    </nav>
+    <div>
+      <p>Box 1235555555</p>
+      <input type="text" id="input" name="input" placeholder="Type something" onclick="empty()">
+
+    </div>
+    <div>
+      <p>Another Box</p>
+      <input type="text" id="output" name="output" placeholder="Type something" onclick="empty()">
+    </div>
+  </nav>
   <button id="btn">Send</button>
-<script type="text/javascript" src="challenge.js"></script>
+  <script type="text/javascript" src="challenge.js"></script>
 </body>
+
 </html>
